--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
 </head>
 <body>
 	
-	<h1>Javascript Guide</h1>
-	
-	<!-- External References -->
+	<h1>jsGuide</h1>
+
+	<h3>Use Dev Tools to navigate</h3>
+
+<!-- 	
 	<script src="references/jQuery_2_1_0.js"></script>
 	<script src="references/OutsideEvents.js"></script>
-
-	<!-- App -->
 	<script src="scripts/app.js"></script>
 	<script src="scripts/practice.js"></script>
 	<script src="scripts/utility.js"></script>
-
-	<!-- Individual Subjects -->
 	<script src="scripts/closures.js"></script>
 	<script src="scripts/core.js"></script>
 	<script src="scripts/events.js"></script>
@@ -28,10 +26,12 @@
 	<script src="scripts/objects.js"></script>
 	<script src="scripts/operators.js"></script>
 	<script src="scripts/scope.js"></script>
-
+ -->
 	<!-- Pattern Libraries -->
 
 	<!-- Style Guidelines -->
+
+	<script data-main="js/app" src="js/require.js"></script>
 
 </body>
 </html>
