--- a/index.html
+++ b/index.html
@@ -6,31 +6,12 @@
 <body>
 	
 	<h1>jsGuide</h1>
+	<h3>Use Dev Tools to explore, navigate and debug</h3>
+	<section>
+		If you are new to Javascript, start by looking at projectConventions, then basics, and so on..
+	</section>
 
-	<h3>Use Dev Tools to navigate</h3>
-
-<!-- 	
-	<script src="references/jQuery_2_1_0.js"></script>
-	<script src="references/OutsideEvents.js"></script>
-	<script src="scripts/app.js"></script>
-	<script src="scripts/practice.js"></script>
-	<script src="scripts/utility.js"></script>
-	<script src="scripts/closures.js"></script>
-	<script src="scripts/core.js"></script>
-	<script src="scripts/events.js"></script>
-	<script src="scripts/functions.js"></script>
-	<script src="scripts/functions2.js"></script>
-	<script src="scripts/functionplayground.js"></script>
-	<script src="scripts/inheritance.js"></script>
-	<script src="scripts/gettersetter.js"></script>
-	<script src="scripts/objects.js"></script>
-	<script src="scripts/operators.js"></script>
-	<script src="scripts/scope.js"></script>
- -->
-	<!-- Pattern Libraries -->
-
-	<!-- Style Guidelines -->
-
+	<!-- This bootstraps the app with require.js, which modularizes our Javascript -->
 	<script data-main="js/app" src="js/require.js"></script>
 
 </body>
