--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>jsGuide</h1>
 	<h3>Use Dev Tools to explore, navigate and debug</h3>
 	<section>
-		If you are new to Javascript, start by looking at projectConventions, then basics, and so on..
+		If you are new to Javascript, start by looking at projectConventions, then beginner, and so on...
 	</section>
 
 	<!-- This bootstraps the app with require.js, which modularizes our Javascript -->
